@@ -32,7 +32,7 @@ import java.util.List;
 )
 public class WebSecurityConfig {
 
-    private final JWTokenFilter JWTokenFilter;
+    private final JWTokenFilter jwTokenFilter;
 
     private final OAuth2AuthenticationFailureHandler oauth2AuthenticationFailureHandler;
 
@@ -42,25 +42,25 @@ public class WebSecurityConfig {
 
     private final HttpCookieOAuth2AuthorizationRequestRepository cookieOAuth2AuthorizationRequestRepository;
 
+
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-                .cors().configurationSource(request -> new CorsConfiguration().applyPermitDefaultValues())
-                .and()
-                .sessionManagement().sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+                .cors().configurationSource(corsConfigurationSource())
                 .and()
                 .csrf().disable()
-                .formLogin().disable()
-                .httpBasic().disable()
-                .addFilterBefore(JWTokenFilter, UsernamePasswordAuthenticationFilter.class)
-                .authorizeRequests()
-                .antMatchers(HttpMethod.GET, ControllerUtils.OPEN_PATH).permitAll()
-                .antMatchers(HttpMethod.GET, ControllerUtils.OPEN_FILES).permitAll()
-                .antMatchers("/api/v1/auth/**", "/oauth2/**").permitAll()
+                .sessionManagement().sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+                .and().formLogin().disable().httpBasic().disable()
+                .addFilterBefore(jwTokenFilter, UsernamePasswordAuthenticationFilter.class)
+                .authorizeRequests().antMatchers(HttpMethod.GET, ControllerUtils.OPEN_PATH).permitAll()
+//                .antMatchers(HttpMethod.GET, ControllerUtils.OPEN_FILES)
+//                .permitAll()
+//                .antMatchers("/api/v1/auth/**", "/oauth2/**")
+                .antMatchers("/api/v1/auth/**").permitAll()
                 .anyRequest().authenticated()
+//                .permitAll()
                 .and()
-                .oauth2Login()
-                .authorizationEndpoint().baseUri("/oauth2/authorize").authorizationRequestRepository(cookieOAuth2AuthorizationRequestRepository)
+                .oauth2Login().authorizationEndpoint().baseUri("/oauth2/authorize").authorizationRequestRepository(cookieOAuth2AuthorizationRequestRepository)
                 .and()
                 .redirectionEndpoint().baseUri("/oauth2/callback/*")
                 .and()
@@ -74,15 +74,15 @@ public class WebSecurityConfig {
     }
 
     @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
+    CorsConfigurationSource corsConfigurationSource() {
         final CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(List.of("*"));
+        configuration.setAllowedOriginPatterns(List.of("http://localhost:3000", "*"));
+        configuration.setAllowedMethods(Arrays.asList("HEAD", "GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
         configuration.setAllowCredentials(true);
-        configuration.setAllowedHeaders(Arrays.asList("Access-Control-Allow-Headers",
-                "Access-Control-Allow-Origin", "Access-Control-Request-Method", "Access-Control-Request-Headers",
-                "Origin", "Cache-Control", "Content-Type", "Authorization", "Ack", "ack", "/**"));
-        configuration.setAllowedMethods(Arrays.asList("DELETE", "GET", "POST", "PATCH", "PUT"));
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        configuration.setAllowedHeaders(List.of("*"));
+        configuration.setExposedHeaders(Arrays.asList("X-Auth-Token", "Authorization", "Access-Control-Allow-Origin",
+                "Access-Control-Allow-Credentials"));
+        final UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
     }
